_sass/_base.scss
/* ... */
.navbar-toggler {
  .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    background-color: var(--global-text-color);
    border-radius: 1px;
    margin-bottom: 4px;
    transition: all 0.2s;
  }

  .top-bar {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
  }

  .middle-bar {
    opacity: 0;
  }

  .bottom-bar {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
  }
}

.navbar-toggler.collapsed {
  .top-bar {
    transform: rotate(0);
  }

  .middle-bar {
    opacity: 1;
  }

  .bottom-bar {
    transform: rotate(0);
  }
}

#light-toggle,
#search-toggle {
  padding: 0;
  border: 0;
  background-color: inherit;
  color: var(--global-text-color);

  &:hover {
    color: var(--global-hover-color);
  }
}

// Social (bottom)

.social {
  text-align: center;

  .contact-icons {
    font-size: 4rem;

    a {
      i::before {
        color: var(--global-text-color);
        transition-property: all 0.2s ease-in-out;
      }

      &:hover {
        i::before {
          color: var(--global-theme-color);
        }
      }
    }
  }

  .contact-note {
    font-size: 0.8rem;
  }
}

.wechat-modal {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.8);
}

.wechat-modal > img {
  display: block;
  position: relative;
  top: 50%;
  left: 50%;
  width: 33%;
  max-width: 400px;
  transform: translate(-50%, -50%);
}

@media only screen and (max-width: 400px) {
  .wechat-modal > img {
    width: 100%;
  }
}

// Footer
footer.fixed-bottom {
  background-color: var(--global-footer-bg-color);
  font-size: 0.75rem;

  .container {
    color: var(--global-footer-text-color);
    padding-top: 9px;
    padding-bottom: 8px;
    text-align: center;
  }

  a {
    color: var(--global-footer-link-color);

    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}

footer.sticky-bottom {
  border-top: 1px solid var(--global-divider-color);
  padding-top: 40px;
  padding-bottom: 40px;
  font-size: 0.9rem;

  .container {
    text-align: center;
  }
}

// CV

.cv {
  margin-bottom: 40px;

  .card {
    background-color: var(--global-card-bg-color);
    border: 1px solid var(--global-divider-color);

    .list-group-item {
      background-color: inherit;
      border-color: var(--global-divider-color);

      .badge {
        color: var(--global-card-bg-color) !important;
        background-color: var(--global-theme-color) !important;
      }
    }
  }
}

.table-cv-map {
  background-color: transparent;
  border: none;
  color: var(--global-text-color);
}

.date-column {
  width: 75px;
  transform: translateX(-15px) translateY(-5px);
}

// Repositories

@media (min-width: 768px) {
  .repo {
    max-width: 50%;
  }
}

// Blog

.header-bar {
  border-bottom: 1px solid var(--global-divider-color);
  text-align: center;
  padding-top: 2rem;
  padding-bottom: 3rem;

  h1 {
    color: var(--global-theme-color);
    font-size: 5rem;
  }
}

.tag-category-list {
  border-bottom: 1px solid var(--global-divider-color);
  text-align: center;
  padding-top: 1rem;

  ul {
    justify-content: center;
    display: flow-root;

    p,
    li {
      list-style: none;
      display: inline-block;
      padding: 1rem 0.5rem;
      color: var(--global-text-color-light);
    }
  }
}

.post-title {
  mjx-container[jax="CHTML"][display="true"] {
    display: unset;
  }
}

.post-list {
  margin: 0;
  margin-bottom: 40px;
  padding: 0;

  li {
    border-bottom: 1px solid var(--global-divider-color);
    list-style: none;
    padding-top: 2rem;
    padding-bottom: 2rem;

    .post-meta {
      color: var(--global-text-color-light);
      font-size: 0.875rem;
      margin-bottom: 0;
    }

    .post-tags {
      color: var(--global-text-color-light);
      font-size: 0.875rem;
      padding-top: 0.25rem;
      padding-bottom: 0;
    }

    a {
      color: var(--global-text-color);
      text-decoration: none;

      &:hover {
        color: var(--global-theme-color);
      }
    }

    mjx-container[jax="CHTML"][display="true"] {
      display: unset;
    }
  }
}

.pagination {
  .page-item {
    .page-link {
      color: var(--global-text-color);

      &:hover {
        color: $black-color;
      }
    }

    &.active .page-link {
      color: $white-color;
      background-color: var(--global-theme-color);

      &:hover {
        background-color: var(--global-theme-color);
      }
    }
  }
}

// Distill

.distill {
  a:hover {
    border-bottom-color: var(--global-theme-color);
    text-decoration: none;
  }
}

// Projects

.projects {
  a {
    text-decoration: none;

    &:hover {
      .card-title {
        color: var(--global-theme-color);
      }
    }
  }

  .card {
    img {
      width: 100%;
    }
  }

  .col {
    padding-bottom: 1rem;
  }

  .grid-sizer,
  .grid-item {
    width: 250px;
    margin-bottom: 10px;
  }

  h2.category {
    color: var(--global-divider-color);
    border-bottom: 1px solid var(--global-divider-color);
    padding-top: 0.5rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
    text-align: right;
  }
}
/* ... */

